Mirror internal fixes

--- a/example/app/CMakeLists.txt
+++ b/example/app/CMakeLists.txt
@@ -21,7 +21,7 @@ elseif("$ENV{MODE}" STREQUAL "EMU")
     set(CMAKE_C_COMPILER "gcc")
     set(CMAKE_CXX_COMPILER "g++")
     find_library(HETSIM_PRIM hetsim_prim)
-elseif(("$ENV{MODE}" STREQUAL "EMU_MANUAL_TRACE") OR ("$ENV{MODE}" STREQUAL "EMU_MANUAL_TRACE"))
+elseif(("$ENV{MODE}" STREQUAL "EMU_MANUAL_TRACE") OR ("$ENV{MODE}" STREQUAL "EMU_AUTO_TRACE"))
     list(APPEND CMAKE_PREFIX_PATH "../../emu/build" "../../tracer/build/runtime/default")
     set(util_path ../../emu/inc)
     set(tracer_path ../../tracer/runtime/default)
